# Project_W7_CoffeeHealth

./: .gitignore  README.md  config.yaml  pyproject.toml
.b64tmp/: HyperparameterImportance_RF.b64  Optuna_optHistory_RFModel.b64  Predictions_Modelscomparison.b64  R2_Modelscomparisons.b64  boxplot_company_region.b64
notebooks/: Untitled.ipynb  claening_data-Copy1.ipynb  explore_clean_data_diana.ipynb  explore_clean_modelingv2_diana.ipynb  functions.py  m2_model_clean.csv  model_building_diana.ipynb  project3_final_w_graphs.ipynb
notebooks/.ipynb_checkpoints/: claening_data-checkpoint.ipynb  functions-checkpoint.py  load_and_clean_data_diana-checkpoint.ipynb
slides/: build_deck.js
