[project]
name = "ml-project-w7"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "optuna>=4.9.0",
    "plotly>=6.8.0",
]
